fix: prevent frame overflowing on small viewports when embedded

--- a/packages/core/components/Puck/components/Canvas/styles.module.css
+++ b/packages/core/components/Puck/components/Canvas/styles.module.css
@@ -22,7 +22,7 @@
   display: flex;
   height: 100%;
   justify-content: center;
-  min-width: 358px;
+  min-width: 288px;
   position: relative;
   width: 100%;
 }
